@@ -7,6 +7,6 @@ libipr_la_SOURCES = utility.cxx \
 		    io.cxx
 #		    lexer.C
 
-AM_CPPFLAGS	= -I@top_builddir@/include
+AM_CPPFLAGS	= -I@top_builddir@/include -I@top_srcdir@/include
 WARN_FLAGS	= -Wall -Wextra -Wno-non-virtual-dtor
 AM_CXXFLAGS	= $(WARN_FLAGS) -O2 -g
